[gd_scene load_steps=12 format=3 uid="uid://brlskw0rqqcgb"]

[ext_resource type="Script" uid="uid://4mwl62rde8yu" path="res://Enemy/enemy_shooter.gd" id="1_6gwvv"]
[ext_resource type="PackedScene" uid="uid://dki33c1a7yjeo" path="res://Enemy/Attack/bullet.tscn" id="2_x8knb"]
[ext_resource type="Texture2D" uid="uid://db14sin7gnd47" path="res://Textures/Enemy/neon_shooter_sprite_2frames_bez_tla.png" id="3_e6r5d"]
[ext_resource type="PackedScene" uid="uid://7ywnno2cpwrg" path="res://utility/hurt_box.tscn" id="3_gnwba"]
[ext_resource type="PackedScene" uid="uid://dcqcpl0qq20rt" path="res://utility/hit_box.tscn" id="4_fvfjj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7vngr"]
radius = 11.0
height = 22.0

[sub_resource type="Animation" id="Animation_kxsfh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7vngr"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f45p3"]
_data = {
&"RESET": SubResource("Animation_kxsfh"),
&"walk": SubResource("Animation_7vngr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuxmm"]
size = Vector2(35, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73wqc"]
size = Vector2(35.75, 22)

[node name="Enemy_shooter" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_6gwvv")
bullet_scene = ExtResource("2_x8knb")
shoot_range = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_e6r5d")
flip_h = true

[node name="CollisionShape2D_shooter" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7vngr")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f45p3")
}

[node name="HurtBox" parent="." instance=ExtResource("3_gnwba")]
collision_mask = 5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_vuxmm")

[node name="HitBox" parent="." instance=ExtResource("4_fvfjj")]
collision_layer = 3

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("RectangleShape2D_73wqc")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
